docs: add documentation for Update
